coffe project updated

--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
         <div class="projetos-box">
 
                 <div class="project-card">
-                    <img src="img/loading.jpg" alt="portifolio1">
+                    <img class="cafeteria-img" src="img/coffe-bg.png" alt="portifolio1">
 
-                        <h3>Coleta de informações - Python</h3>
+                        <h3>Site para Cafeteria </h3>
 
                         <p>
-                            Automatizei uma tarefa  que coleta informações de um site e as insere em uma planilha. Desenvolvi o Back-End e estou trabalhando no Front-End para disponibilizar o projeto completo
+                            O site está sendo criado com painel do atendente, pedidos com notificações em tempo real, exportação de vendas e layout responsivo
                         </p>
                         <div class="btn"><a href="andamento.html">Ver projeto</a> </div>
                 </div>
