--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
      rel='stylesheet'>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="">
+    <link rel="icon" type="image/png" sizes="16x16" href="">
     <link rel="manifest" href="/site.webmanifest">
      <script src="https://kit.fontawesome.com/7e925de021.js" crossorigin="anonymous"></script>
 
