added link to project and updated files

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <p>
                             O site está sendo criado com painel do atendente, pedidos com notificações em tempo real, exportação de vendas e layout responsivo
                         </p>
-                        <div class="btn"><a href="andamento.html">Ver projeto</a> </div>
+                        <div class="btn"><a href="https://gleydson-cafeteria.netlify.app/">Ver projeto</a> </div>
                 </div>
 
                 <div class="project-card">
